@@ -56,3 +56,4 @@
     - Add shop settings, shop currency name, block choices
     - Command ./ph chooser     permission node prophunt.command.chooser. Opens up the block chooser
     - Block chooser is permission based. They must have the permission prophunt.blockchooser.<blockid>  or prophunt.blockchooser.<blockid>-<blockDamage> to choose one!
+    - add scoreboardtranslate.yml for trasnlating the scoreboard
